team image cover fix 1

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -108,7 +108,7 @@ a{
 .team-item__img{
     position: relative;
     width: 124px;
-    min-width: 124px;.team-item__img
+    min-width: 124px;
     height: 124px;
     background-color: #C4C4C4;
     overflow: hidden;
