--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -79,8 +79,196 @@ a{
     color: #000000;
     opacity: 0.6;
 }
+.h2-small{
+    font-size: 46px;
+    line-height: 60px;
+}
+.h2-big{
+    font-size: 88px;
+    line-height: 119px;
+}
+.slider-controls{
+    display: flex;
+    justify-content: flex-end;
+    margin-top: 30px;
+}
+.slider-arrow{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 65px;
+    height: 65px;
+    margin-left: 20px;
+    -webkit-border-radius: 100%;
+    -moz-border-radius: 100%;
+    border-radius: 100%;
+    cursor: pointer;
+}
+.slider-arrow.slick-disabled{
+    opacity: 0.2;
+    cursor: not-allowed;
+}
 
-.subscribe{
+.help{
+    padding: 115px 0;
+    font-family: "Gilroy-Medium", sans-serif;
+}
+.help__container{
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
+}
+.help__main, .help__box{
+    width: 100%;
+    max-width: 50%;
+}
+.help__text{
+    padding: 37px 0 40px 0;
+    font-size: 24px;
+    line-height: 32px;
+}
+.help__btn{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 272px;
+    height: 72px;
+    background-color: #000000;
+    font-family: "Gilroy-SemiBold", sans-serif;
+    font-size: 18px;
+    line-height: 24px;
+    color: #ffffff;
+}
+.help__btn:hover{
+    background-color: #3787FE;
+}
+.help__box{
+    padding: 54px 52px;
+    background-color: #ffffff;
+}
+.help-list{
+    font-size: 18px;
+    line-height: 28px;
+}
+.help-list__item{
+    position: relative;
+    padding-left: 34px;
+}
+.help-list__item:before,
+.help-list__item:after{
+    content: '';
+    position: absolute;
+    -webkit-border-radius: 100%;
+    -moz-border-radius: 100%;
+    border-radius: 100%;
+}
+.help-list__item:before{
+    top: 50%;
+    left: 0;
+    width: 18px;
+    height: 18px;
+    margin-top: -9px;
+    background-color: #000000;
+}
+.help-list__item:after{
+    top: 50%;
+    left: 5px;
+    width: 8px;
+    height: 8px;
+    margin-top: -4px;
+    background-color: #ffffff;
+}
+.help-list__item::first-letter{
+    text-transform: lowercase;
+}
+.help-list__item:not(:last-child){
+    margin-bottom: 28px;
+}
+
+.projects{
+    padding: 120px 0;
+    font-family: "Gilroy-Medium", sans-serif;
+}
+.projects__inner{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    margin-top: 94px;
+}
+.projects__tabs{
+    width: 33.66666666666667%;
+}
+.projects__slider{
+    width: 58.91666666666667%;
+    margin-left: auto;
+}
+.projects-tab{
+    border-bottom: 2px solid #000000;
+}
+.projects-tab__title{
+    padding: 25px 0;
+    font-size: 28px;
+    line-height: 38px;
+    cursor: pointer;
+}
+.projects-tab__text{
+    display: none;
+    font-size: 16px;
+    line-height: 26px;
+    opacity: 0.7;
+}
+.projects-tab--active{
+    margin-bottom: 15px;
+    padding: 48px;
+    border-bottom: none;
+    background-color: #3787FE;
+    color: #ffffff;
+}
+.projects-tab--active .projects-tab__title{
+    padding: 0 0 20px 0;
+}
+.projects-tab--active .projects-tab__text{
+    display: block;
+}
+.projects-slider__next,
+.projects-slider__prev{
+    border: 2px solid #000000;
+}
+
+.thanks{
+    display: grid;
+    grid-template-columns: repeat(4, minmax(200px, 1fr));
+    gap: 20px;
+    margin-bottom: 130px;
+    font-family: "Gilroy-Medium", sans-serif;
+}
+.thanks-item img{
+    width: 100%;
+}
+.thanks-item--big{
+    grid-column: 2 / span 2;
+    grid-row: 2 / 3;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+.thanks-item--big p{
+    max-width: 500px;
+    margin-top: 16px;
+    font-size: 24px;
+    line-height: 30px;
+}
+.thanks-item--big a{
+    color: #000000;
+    text-decoration: underline;
+}
+.thanks-item--big a:hover{
+    color: #3787FE;
+}
+
+ .subscribe{
     padding: 166px 0;
     font-family: "Gilroy-Medium", sans-serif;
     font-size: 68px;
@@ -89,6 +277,10 @@ a{
 .subscribe__link{
     text-decoration: underline;
     color: #000000;
+}
+.subscribe__link:hover{
+    text-decoration: underline;
+    color: #3787FE;
 }
 
 .team{
