--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -58,9 +58,9 @@ a, svg{
 
 .container{
     width: 100%;
-    max-width: 1230px;
+    max-width: 1248px;
     margin: 0 auto;
-    padding: 0 15px;
+    padding: 0 24px;
 }
 .tac{
     text-align: center;
@@ -245,6 +245,7 @@ a, svg{
 }
 .work__inner{
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
     margin-top: 84px;
 }
@@ -351,7 +352,7 @@ a, svg{
     align-items: center;
     font-family: 'Outfit', sans-serif;
     font-size: 24px;
-    height: 32px;
+    line-height: 32px;
 }
 .faqs-item__copy{
     margin-left: 10px;
@@ -503,7 +504,7 @@ a, svg{
 
 .thanks{
     display: grid;
-    grid-template-columns: repeat(4, minmax(200px, 1fr));
+    grid-template-columns: repeat(4, minmax(170px, 1fr));
     gap: 20px;
     margin-bottom: 130px;
     font-family: "Gilroy-Medium", sans-serif;
@@ -518,6 +519,7 @@ a, svg{
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    padding: 16px;
 }
 .thanks-item--big p{
     max-width: 500px;
@@ -554,7 +556,7 @@ a, svg{
 }
 .team__items{
     display: grid;
-    grid-template-columns: auto auto auto;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     column-gap: 77px;
     row-gap: 80px;
     margin: 90px 0;
@@ -631,7 +633,12 @@ a, svg{
     align-items: center;
     justify-content: center;
     min-height: 148px;
+    padding: 16px;
     background-color: #ffffff;
+    border: 2px solid #ffffff;
+}
+.partners__item:hover{
+    border: 2px solid #000000;
 }
 
 .contacts{
@@ -644,6 +651,11 @@ a, svg{
     flex-wrap: wrap;
     align-items: center;
     justify-content: space-between;
+}
+.contacts__info,
+.contacts__media{
+    width: 100%;
+    max-width: 46.5%;
 }
 .contacts-title{
     display: flex;
