--- a/assets/css/nft.css
+++ b/assets/css/nft.css
@@ -33,6 +33,27 @@
     font-size: 24px;
     line-height: 32px;
 }
+.nft-tabs-controls{
+    display: flex;
+    flex-wrap: wrap;
+}
+.nft-tabs-controls__item{
+    margin-right: 1px;
+    padding: 8px 16px;
+    background-color: #ffffff;
+    color: #000000;
+}
+.nft-tabs-controls__item:hover,
+.nft-tabs-controls__item_active{
+    background-color: #000000;
+    color: #ffffff;
+}
+.nft-tab{
+    display: none;
+}
+.nft-tab:first-child{
+    display: block;
+}
 .nft-grid{
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
